--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -4,103 +4,7 @@
     <meta charset="UTF-8">
     <title>Ajouter un Employé</title>
     <link rel="stylesheet" href="/css/global.css">
-    <style>
-        /* Conteneur principal */
-        .form-container {
-            flex: 1; /* Permet au conteneur principal de prendre tout l'espace restant */
-            width: 60%;
-            margin: 1em auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative; /* Pour positionner le lien de retour */
-        }
-
-        /* Formulaire */
-        .form-container form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .form-container label {
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        .form-container input[type="text"],
-        .form-container input[type="email"],
-        .form-container input[type="number"] {
-            padding: 10px;
-            margin-top: 5px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .form-container input[type="submit"] {
-            margin-top: 20px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .form-container input[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-
-        /* Styles pour le lien de retour */
-        .back-link {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 20px;
-            color: #007bff;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-        }
-
-        .back-link:hover {
-            color: #0056b3;
-        }
-
-        .back-link::before {
-            content: '←'; /* Caractère flèche Unicode */
-            margin-right: 8px;
-        }
-
-        .add-title {
-            margin-top: 1em;
-        }
-
-        /* Media Queries for Responsive Design */
-        @media (max-width: 768px) {
-            .form-container {
-                width: 90%;
-            }
-
-            .back-link {
-                font-size: 18px;
-                top: 15px;
-                left: 15px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .form-container {
-                width: 95%;
-            }
-
-            .back-link {
-                font-size: 16px;
-            }
-        }
-
-    </style>
+    <link rel="stylesheet" href="/css/add-employee.css">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
