--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,27 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Non Trouvée</title>
-  <style>
-    body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        background-color: #f2f2f2;
-        padding: 50px;
-    }
-    .container {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        display: inline-block;
-    }
-    h1 {
-        color: #e67e22;
-    }
-    p {
-        color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/404.css">
 </head>
 <body>
 <div class="container">
